add a dropdown menu and radio buttons form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,79 @@
     <title>Independent Project 4</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Welcome to pizza planet!</h1>
+      </div>
+        <form id="toppings-dropdown">
+          <h3> Please select your size</h3>
+          <select class="form-control" id="title">
+            <option>Mars (Small)</option>
+            <option>Earth (Medium)</option>
+            <option>Uranus (Large)</option>
+            <option>Jupiter (X Large)</option>
+          </select>
+          <br>
+        </form>
+    </div>
+  <br>
+    <div class="container">
+    <form>
+       <div class="toppings">
+         <p1>Please select your toppings</p1>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="cheese">
+              Extra Cheese
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="pepperoni">
+              Pepperoni
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="sausage">
+              Sausage
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="mushrooms">
+              Mushrooms
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="onions">
+              Onions
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="olives">
+              Black Olives
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="peppers">
+              Green Peppers
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="topping" value="pineapple">
+              Pineapple
+            </label>
+          </div>
+       </div>
+       <button type="submit" name="button">Submit to Star Command</button>
+    </form>
+    </div>
+
 
   </body>
 </html>
