--- a/index.html
+++ b/index.html
@@ -26,61 +26,40 @@
     </div>
   <br>
     <div class="container">
-    <form>
-       <div class="toppings">
-         <p1>Please select your toppings</p1>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="cheese">
-              Extra Cheese
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="pepperoni">
-              Pepperoni
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="sausage">
-              Sausage
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="mushrooms">
-              Mushrooms
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="onions">
-              Onions
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="olives">
-              Black Olives
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="peppers">
-              Green Peppers
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="topping" value="pineapple">
-              Pineapple
-            </label>
-          </div>
-       </div>
-       <button type="submit" name="button">Submit to Star Command</button>
-    </form>
+      <h3> Please select your toppings</h3>
+      <form action="" method="post">
+        <input type="checkbox" name="favorite" value="cheese" /> Extra Cheese
+        <br>
+        <input type="checkbox" name="favorite" value="pepperoni" /> Pepperoni
+        <br>
+        <input type="checkbox" name="favorite" value="sausage" /> Sausage
+        <br>
+        <input type="checkbox" name="favorite" value="mushrooms" /> Mushrooms
+        <br>
+        <input type="checkbox" name="favorite" value="olives" /> Olives
+        <br>
+        <input type="checkbox" name="favorite" value="onions" /> Onions
+        <br>
+        <input type="checkbox" name="favorite" value="peppers" /> Green Peppers
+        <br>
+        <input type="checkbox" name="favorite" value="pineapple" /> Pineapple
+        <br>
+        <input type="checkbox" name="favorite" value="anchovy" /> Anchovy
+        <br>
+        <br>
+        <button type="submit" name="button">Submit to Star Command</button>
+      </form>
+
     </div>
+
+
+    <div class="container">
+      <div class ="results">
+        <h3>Your total will be <span class="finished"></span> Tokens</h3>
+      </div>
+    </div>
+    <br>
+
 
 
   </body>
