--- a/index.html
+++ b/index.html
@@ -15,47 +15,45 @@
       </div>
         <form id="toppings-dropdown">
           <h3> Please select your size</h3>
-          <select class="form-control" id="title">
+          <select class="form-control" id="title" name ="sizes">
             <option>Mars (Small)</option>
             <option>Earth (Medium)</option>
             <option>Uranus (Large)</option>
             <option>Jupiter (X Large)</option>
           </select>
           <br>
+  <br>
+        <h3> Please select your toppings</h3>
+          <input type="checkbox" name="topping" value="extraCheese" id="selectedCheese" /> Extra Cheese
+          <br>
+          <input type="checkbox" name="topping" value="pepperoni" id="selectedPepperoni" /> Pepperoni
+          <br>
+          <input type="checkbox" name="topping" value="sausage" id="selectedSausage" /> Sausage
+          <br>
+          <input type="checkbox" name="topping" value="mushrooms" id="selectedMushrooms" /> Mushrooms
+          <br>
+          <input type="checkbox" name="topping" value="olives" id="selectedOlives" /> Olives
+          <br>
+          <input type="checkbox" name="topping" value="onions" id="selectedOnions" /> Onions
+          <br>
+          <input type="checkbox" name="topping" value="peppers" id="selectedPeppers" /> Green Peppers
+          <br>
+          <input type="checkbox" name="topping" value="pineapple" id="selectedPineapple" /> Pineapple
+          <br>
+          <input type="checkbox" name="topping" value="anchovy" id="selectedAnchovy" /> Anchovy
+          <br>
+          <br>
+          <button type="submit" name="button">Submit to Star Command</button>
         </form>
     </div>
-  <br>
-    <div class="container">
-      <h3> Please select your toppings</h3>
-      <form action="" method="post">
-        <input type="checkbox" name="favorite" value="cheese" /> Extra Cheese
-        <br>
-        <input type="checkbox" name="favorite" value="pepperoni" /> Pepperoni
-        <br>
-        <input type="checkbox" name="favorite" value="sausage" /> Sausage
-        <br>
-        <input type="checkbox" name="favorite" value="mushrooms" /> Mushrooms
-        <br>
-        <input type="checkbox" name="favorite" value="olives" /> Olives
-        <br>
-        <input type="checkbox" name="favorite" value="onions" /> Onions
-        <br>
-        <input type="checkbox" name="favorite" value="peppers" /> Green Peppers
-        <br>
-        <input type="checkbox" name="favorite" value="pineapple" /> Pineapple
-        <br>
-        <input type="checkbox" name="favorite" value="anchovy" /> Anchovy
-        <br>
-        <br>
-        <button type="submit" name="button">Submit to Star Command</button>
-      </form>
 
-    </div>
+
+
 
 
     <div class="container">
       <div class ="results">
-        <h3>Your total will be <span class="finished"></span> Tokens</h3>
+        <h3>Your total will be <span class="pizzaTotal"></span> Tokens</h3>
       </div>
     </div>
     <br>
