add funtion to check which boxes are checked

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
           <br>
   <br>
         <h3> Please select your toppings</h3>
-          <input type="checkbox" name="topping" value="extraCheese" id="selectedCheese" /> Extra Cheese
+          <input type="checkbox" name="topping" value="1.00" id="selectedCheese" /> Extra Cheese
           <br>
-          <input type="checkbox" name="topping" value="pepperoni" id="selectedPepperoni" /> Pepperoni
+          <input type="checkbox" name="topping" value="2.00" id="selectedPepperoni" /> Pepperoni
           <br>
-          <input type="checkbox" name="topping" value="sausage" id="selectedSausage" /> Sausage
+          <input type="checkbox" name="topping" value="2.00" id="selectedSausage" /> Sausage
           <br>
-          <input type="checkbox" name="topping" value="mushrooms" id="selectedMushrooms" /> Mushrooms
+          <input type="checkbox" name="topping" value="1.00" id="selectedMushrooms" /> Mushrooms
           <br>
-          <input type="checkbox" name="topping" value="olives" id="selectedOlives" /> Olives
+          <input type="checkbox" name="topping" value="1.00" id="selectedOlives" /> Olives
           <br>
-          <input type="checkbox" name="topping" value="onions" id="selectedOnions" /> Onions
+          <input type="checkbox" name="topping" value="1.00" id="selectedOnions" /> Onions
           <br>
-          <input type="checkbox" name="topping" value="peppers" id="selectedPeppers" /> Green Peppers
+          <input type="checkbox" name="topping" value="1.00" id="selectedPeppers" /> Green Peppers
           <br>
-          <input type="checkbox" name="topping" value="pineapple" id="selectedPineapple" /> Pineapple
+          <input type="checkbox" name="topping" value="1.00" id="selectedPineapple" /> Pineapple
           <br>
-          <input type="checkbox" name="topping" value="anchovy" id="selectedAnchovy" /> Anchovy
+          <input type="checkbox" name="topping" value="3.00" id="selectedAnchovy" /> Anchovy
           <br>
           <br>
           <button type="submit" name="button">Submit to Star Command</button>
