--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
     <div class="container">
-      <div class ="results">
+      <div id ="results">
         <h3>Your total will be <span class="pizzaTotal"></span> Tokens</h3>
       </div>
     </div>
