add styling, update README

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <meta charset="utf-8">
     <title>Independent Project 4</title>
   </head>
-  <body>
+  <body style="background-image: url(img/space3.jpeg)" >
+
+
     <div class="container">
       <div class="jumbotron" style ="background-image: url(img/Pizza_Planet.jpg); background-size: 100%;">
-        <h1>Welcome to pizza planet!</h1>
+  <div class="neonText">
+    <h1> <span>Pizza</span><span>Planet</span></h1>
+  </div>
       </div>
         <form id="toppings-dropdown">
           <h3> Please select your cruiser</h3>
@@ -22,7 +26,7 @@
             <option id ="selectedIss" value="12">International Space Station (X Large)</option>
           </select>
           <br>
-  <br>
+          <br>
         <h3> Please select your Gear</h3>
           <input type="checkbox" name="topping" value="1.00" id="selectedCheese" /> Extra Cheese
           <br>
