change jumbotron opacity

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta charset="utf-8">
     <title>Independent Project 4</title>
   </head>
-  <body style="background-image: url(img/space3.jpeg)" >
+  <body style="background-image: url(img/space3.jpeg)">
 
 
     <div class="container">
-      <div class="jumbotron" style ="background-image: url(img/Pizza_Planet.jpg); background-size: 100%;">
+      <div class="jumbotron">
   <div class="neonText">
     <h1> <span>Pizza</span><span>Planet</span></h1>
   </div>
